# freeswitch-modules

mod_aws_transcribe/: CMakeLists.txt
